PROD_10-24-19/force-app/main/default/objects/SmartvCard__Note__c/fields/SmartvCard__User__c.field-meta.xml
<CustomField>
    <fullName>SmartvCard__User__c</fullName>
    <label>User</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>