PROD_10-24-19/force-app/main/default/objects/SmartvCard__Note__c/fields/SmartvCard__Validation_Record__c.field-meta.xml
<CustomField>
    <fullName>SmartvCard__Validation_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Record</label>
    <type>Checkbox</type>
</CustomField>