PROD_10-24-19/force-app/main/default/objects/SmartvCard__Note__c/validationRules/SmartvCard__Not_new.validationRule-meta.xml
<ValidationRule>
    <fullName>SmartvCard__Not_new</fullName>
    <active>true</active>
    <errorConditionFormula>SmartvCard__Validation_Record__c = True</errorConditionFormula>
    <errorMessage>vCard Note record already exists. There can be only one vCard Note Record.</errorMessage>
</ValidationRule>