PROD_10-24-19/force-app/main/default/objects/SmartvCard__Note__c/validationRules/SmartvCard__Valid_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>SmartvCard__Valid_Field</fullName>
    <active>true</active>
    <errorConditionFormula>SmartvCard__Validation__c =  True</errorConditionFormula>
    <errorMessage>The specified field is not a valid field In the Account Object</errorMessage>
</ValidationRule>